--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.bluetooth.pMon"
+    package="org.bluetooth.pRainMaster"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -26,12 +26,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:logo="@drawable/ic_launcher"
+        android:logo="@mipmap/ic_launcher"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ScanningActivity"
+            android:name="org.bluetooth.pRainMaster.ScanningActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -41,22 +41,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PeripheralActivity"
+            android:name="org.bluetooth.pRainMaster.PeripheralActivity"
             android:label="@string/title_activity_peripheral"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
-            android:name=".PmonActivity"
+            android:name="org.bluetooth.pRainMaster.PmonActivity"
             android:label="@string/title_activity_hrdemo"
-            android:parentActivityName=".ScanningActivity"
+            android:parentActivityName="org.bluetooth.pRainMaster.ScanningActivity"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.bluetooth.pMon.ScanningActivity" />
+                android:value="org.bluetooth.pRainMaster.ScanningActivity" />
         </activity>
         <service
-            android:name=".pMonService"
+            android:name="org.bluetooth.pRainMaster.pMonService"
             android:enabled="true"
           >
         </service>
